--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             Obecnie Sokół jest dzielnicą Gorlic, w niej też znajduje się Park. Do Parku prowadzą trzy mosty - jeden drogowy i dwa piesze. Jeden z nich jest okazałym mostem wiszącym.
           </p>
           <img id="klim" src="miski.jpg"> <img id="klim" src="most.jpg"> <br>
-          < <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
+           <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
           <h3> Magurski Park Narodowy</h3>
           <p> <strong>Magurski Park Narodowy</strong> powstał 1 stycznia 1995 roku. Obejmuje on tereny na pograniczu województw Małopolskiego i Podkarpackiego, ma powierzchnię 194,39 km kwadratowych. W parku tym występuje ponad 800
           gatunków roślin i ok. 200 gatunków zwierząt. Rocznie odwiedza go ok. 40 tys. ludzi.</p><img id="klim" src="woda.jpg"> <img id="klim" src ="magur2.jpg"> <br> 
