--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <audio src="muzyka.mp3" controls preload ="auto" >
     
   </audio>  
-  <input id="kolor" type="color" onchange="zmiana()"/>
+  <input id="kolor" type="color" oninput="zmiana()"/>
  
   </footer>
 </body>
