--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
             <h3> Ratusz Gorlicki. </h3>
             <p><strong>Gorlicki ratusz</strong> został oryginalnie zbudowany w roku 1790. W latach 1948 - 1950 został on rozbudowany, gdzyż nie był wystarczająco okazały. W XIX wieku w ratuszu mieściła się apteka, którą
-            prowadził Ignacy Łukasiewicz. W roku 2023 zakończony został remont ratusza. </p><br><a href="https://www.gorlice.pl/pl/368/0/ratusz-miejski.html">Więcej o ratuszu</a><br><img id="zab" src="ratusz.jpg"> <img id="zab" src="ratusz2.jpg"> <br>  
+            prowadził Ignacy Łukasiewicz. W roku 2023 zakończony został remont ratusza.<a href="https://www.gorlice.pl/pl/368/0/ratusz-miejski.html">Więcej o ratuszu</a></p><img id="zab" src="ratusz.jpg"> <img id="zab" src="ratusz2.jpg"> <br>  
             <br>
             <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
         </section>
