--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
             <h2> Większość Gorlic została zniszczona podczas pierwszej wojny światowej. Z tego powodu w Gorlicach nie zbyt wielu zabytków. Jednak pozostało kilka budynków, na które warto zwrócić uwagę.</h2>
             <h3> Bazylika mniejsza pod wezwaniem Najświętszej Maryi Panny w Gorlicach. </h3>
             <p><strong>Bazylika mniejsza pod wezwaniem Najświętszej Maryi Panny w Gorlicach </strong>była budowana w latach 1885 - 1892. Została mocno zniszczona podczas biwty pod Gorlicami w 1915 roku. Odbudowano ją w latach
-            1921 - 1932. W latach 2000 - 2003 przeszła remont. 23 maja 2009 roku papież Benedykt XVI mianował kościół Bazyliką mniejszą. W jednej z bocznych naw znajduje się figura Pana Jezusa w Więzieniu.</p>
+            1921 - 1932. W latach 2000 - 2003 przeszła remont. 23 maja 2009 roku papież Benedykt XVI mianował kościół Bazyliką mniejszą. W jednej z bocznych naw znajduje się figura Pana Jezusa w Więzieniu. <a class="link" href="https://bazylikagorlice.pl">Więcej o bazylice</a></p>
             <img id="zab" src="zew2.jpg"> <img id="zab" src="wew2.jpg"> <br>  <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
             <h3> Kościół pod wezwaniem Świętych Jakuba i Filipa w Sękowej.</h3>
             <p><strong>Kościół pod wezwaniem Świętych Jakuba i Filipa w Sękowej</strong> to drewniany kościół, zbudowany na początku XVI wieku (ok. 1520 rok). Został on wpisany na listę światowego dziedzictwa UNESCO
-            Jest on zbudowany w stylu gotyckim sakralnego budownictwa drewnianego. Do 1914 roku był uważany za najpiękniejszy w całej Małopolsce. </p> <img id="zab" src="zsek.jpg"> <img id="zab" src="wsek2.jpg"> <br>
+            Jest on zbudowany w stylu gotyckim sakralnego budownictwa drewnianego. Do 1914 roku był uważany za najpiękniejszy w całej Małopolsce. <a class="link" href="https://pl.wikipedia.org/wiki/Kościół_św._Filipa_i_św._Jakuba_w_Sękowej">Więcej o kościele</a></p> <img id="zab" src="zsek.jpg"> <img id="zab" src="wsek2.jpg"> <br>
             <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
             <h3> Ratusz Gorlicki. </h3>
             <p><strong>Gorlicki ratusz</strong> został oryginalnie zbudowany w roku 1790. W latach 1948 - 1950 został on rozbudowany, gdzyż nie był wystarczająco okazały. W XIX wieku w ratuszu mieściła się apteka, którą
-            prowadził Ignacy Łukasiewicz. W roku 2023 zakończony został remont ratusza.<a class="link" href="https://www.gorlice.pl/pl/368/0/ratusz-miejski.html">Więcej o ratuszu</a></p><img id="zab" src="ratusz.jpg"> <img id="zab" src="ratusz2.jpg"> <br>  
+            prowadził Ignacy Łukasiewicz. W roku 2023 zakończony został remont ratusza. <a class="link" href="https://www.gorlice.pl/pl/368/0/ratusz-miejski.html">Więcej o ratuszu</a></p><img id="zab" src="ratusz.jpg"> <img id="zab" src="ratusz2.jpg"> <br>  
             <br>
             <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
         </section>
