--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
           <h2> Przyroda ziemii Gorlickiej jest bardzo piękna. Jest bardzo różnorodna - występuje wiele lasów, łąk i mokradeł. Mamy też rzeki, jeziora i nawet sztuczny zalew.</h2> 
           <h3> Zalew Klimkówka</h3>
           <p> <strong>Jezioro Klimkowskie</strong>, znane lepiej jako <strong>Klimkówka</strong>, to sztuczny zalew utworzony na rzecze Ropie w 1994 roku. Cały proces budowy zajął 24 lata. Oprócz bycia świetnym miejscem na wypoczynek,
-           Klimkówka jest także źródłem wody pitnej i przemysłowej dla Jasła i Gorlic. </p> <img id="klim" src="klimkowka.jpg" > <img id="klim" src="klim2.jpg"> <br>
+           Klimkówka jest także źródłem wody pitnej i przemysłowej dla Jasła i Gorlic. <a class="link" href="https://pl.wikipedia.org/wiki/Jezioro_Klimkowskie">Więcej o Klimkówce</a></p> <img id="klim" src="klimkowka.jpg" > <img id="klim" src="klim2.jpg"> <br>
            <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
           <h3> Park miejski w Gorlicach</h3>
           <p> <strong>Park miejski im. Wojciecha Biechońskiego </strong>położony jest w widłach rzek Ropa i Sękówka. Powstał on w roku <strong>1900</strong>, gdy miasto Gorlice wykupiło od wsi Sokół tereny, które przeznaczyło na założenie parku.
-            Obecnie Sokół jest dzielnicą Gorlic, w niej też znajduje się Park. Do Parku prowadzą trzy mosty - jeden drogowy i dwa piesze. Jeden z nich jest okazałym mostem wiszącym.
+            Obecnie Sokół jest dzielnicą Gorlic, w niej też znajduje się Park. Do Parku prowadzą trzy mosty - jeden drogowy i dwa piesze. Jeden z nich jest okazałym mostem wiszącym. <a class="link" href="https://www.gorlice.pl/pl/376/0/park-miejski.html">Więcej o parku miejskim</a>
           </p>
           <img id="klim" src="miski.jpg"> <img id="klim" src="most.jpg"> <br>
            <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
           <h3> Magurski Park Narodowy</h3>
           <p> <strong>Magurski Park Narodowy</strong> powstał 1 stycznia 1995 roku. Obejmuje on tereny na pograniczu województw Małopolskiego i Podkarpackiego, ma powierzchnię 194,39 km kwadratowych. W parku tym występuje ponad 800
-          gatunków roślin i ok. 200 gatunków zwierząt. Rocznie odwiedza go ok. 40 tys. ludzi.</p><img id="klim" src="woda.jpg"> <img id="klim" src ="magur2.jpg"> <br> 
+          gatunków roślin i ok. 200 gatunków zwierząt. Rocznie odwiedza go ok. 40 tys. ludzi. <a class="link" href="http://www.magurskipn.pl">Więcej o MPN</a></p><img id="klim" src="woda.jpg"> <img id="klim" src ="magur2.jpg"> <br> 
           <button type="button" class="pszydzizg" onclick="nawi('#nawigacja')"><p>Góra strony</p></button>
         </section>
         <section id="zabytki">
