--- a/index.html
+++ b/index.html
@@ -63,8 +63,10 @@
     
   </audio>  
   <input id="kolor" type="color" oninput="zmiana()"/>
-  <script src="kanwa.js"></script> 
+  <canvas id="canvas" width="200" height="100" style="border:3px solid #000000;"></canvas>
+  <script src="kanwa.js" defer></script>
+ 
   </footer>
-   
+    <div id="podpis"><p  >Muzyka |</p>      <p >  Zmiana koloru tła  | </p>       <p > Narysuj swój ulubiony zabytek!</p></div>
 </body>
 </html>
